--- a/README
+++ b/README
@@ -1,20 +1,11 @@
-SUMMARY & USAGE LICENSE
-=============================================
+SUMMARY
+================================================================================
 
-MovieLens data sets were collected by the GroupLens Research Project
-at the University of Minnesota.
- 
-This data set consists of:
-	* 100,000 ratings (1-5) from 943 users on 1682 movies. 
-	* Each user has rated at least 20 movies. 
-        * Simple demographic info for the users (age, gender, occupation, zip)
+These files contain 1,000,209 anonymous ratings of approximately 3,900 movies 
+made by 6,040 MovieLens users who joined MovieLens in 2000.
 
-The data was collected through the MovieLens web site
-(movielens.umn.edu) during the seven-month period from September 19th, 
-1997 through April 22nd, 1998. This data has been cleaned up - users
-who had less than 20 ratings or did not have complete demographic
-information were removed from this data set. Detailed descriptions of
-the data file can be found at the end of this file.
+USAGE LICENSE
+================================================================================
 
 Neither the University of Minnesota nor any of the researchers
 involved can guarantee the correctness of the data, its suitability
@@ -41,117 +32,139 @@ If you have any further questions or comments, please contact GroupLens
 <grouplens-info@cs.umn.edu>. 
 
 CITATION
-==============================================
+================================================================================
 
-To acknowledge use of the dataset in publications, please cite the 
-following paper:
+To acknowledge use of the dataset in publications, please cite the following
+paper:
 
-F. Maxwell Harper and Joseph A. Konstan. 2015. The MovieLens Datasets:
-History and Context. ACM Transactions on Interactive Intelligent
-Systems (TiiS) 5, 4, Article 19 (December 2015), 19 pages.
-DOI=http://dx.doi.org/10.1145/2827872
+F. Maxwell Harper and Joseph A. Konstan. 2015. The MovieLens Datasets: History
+and Context. ACM Transactions on Interactive Intelligent Systems (TiiS) 5, 4,
+Article 19 (December 2015), 19 pages. DOI=http://dx.doi.org/10.1145/2827872
 
 
 ACKNOWLEDGEMENTS
-==============================================
+================================================================================
 
-Thanks to Al Borchers for cleaning up this data and writing the
-accompanying scripts.
-
-PUBLISHED WORK THAT HAS USED THIS DATASET
-==============================================
-
-Herlocker, J., Konstan, J., Borchers, A., Riedl, J.. An Algorithmic
-Framework for Performing Collaborative Filtering. Proceedings of the
-1999 Conference on Research and Development in Information
-Retrieval. Aug. 1999.
+Thanks to Shyong Lam and Jon Herlocker for cleaning up and generating the data
+set.
 
 FURTHER INFORMATION ABOUT THE GROUPLENS RESEARCH PROJECT
-==============================================
+================================================================================
 
-The GroupLens Research Project is a research group in the Department
-of Computer Science and Engineering at the University of Minnesota.
-Members of the GroupLens Research Project are involved in many
-research projects related to the fields of information filtering,
-collaborative filtering, and recommender systems. The project is lead
-by professors John Riedl and Joseph Konstan. The project began to
-explore automated collaborative filtering in 1992, but is most well
-known for its world wide trial of an automated collaborative filtering
-system for Usenet news in 1996.  The technology developed in the
-Usenet trial formed the base for the formation of Net Perceptions,
-Inc., which was founded by members of GroupLens Research. Since then
-the project has expanded its scope to research overall information
-filtering solutions, integrating in content-based methods as well as
-improving current collaborative filtering technology.
+The GroupLens Research Project is a research group in the Department of 
+Computer Science and Engineering at the University of Minnesota. Members of 
+the GroupLens Research Project are involved in many research projects related 
+to the fields of information filtering, collaborative filtering, and 
+recommender systems. The project is lead by professors John Riedl and Joseph 
+Konstan. The project began to explore automated collaborative filtering in 
+1992, but is most well known for its world wide trial of an automated 
+collaborative filtering system for Usenet news in 1996. Since then the project 
+has expanded its scope to research overall information filtering solutions, 
+integrating in content-based methods as well as improving current collaborative 
+filtering technology.
 
-Further information on the GroupLens Research project, including
-research publications, can be found at the following web site:
+Further information on the GroupLens Research project, including research 
+publications, can be found at the following web site:
         
         http://www.grouplens.org/
 
-GroupLens Research currently operates a movie recommender based on
+GroupLens Research currently operates a movie recommender based on 
 collaborative filtering:
 
         http://www.movielens.org/
 
-DETAILED DESCRIPTIONS OF DATA FILES
-==============================================
+RATINGS FILE DESCRIPTION
+================================================================================
 
-Here are brief descriptions of the data.
+All ratings are contained in the file "ratings.dat" and are in the
+following format:
 
-ml-data.tar.gz   -- Compressed tar file.  To rebuild the u data files do this:
-                gunzip ml-data.tar.gz
-                tar xvf ml-data.tar
-                mku.sh
+UserID::MovieID::Rating::Timestamp
 
-u.data     -- The full u data set, 100000 ratings by 943 users on 1682 items.
-              Each user has rated at least 20 movies.  Users and items are
-              numbered consecutively from 1.  The data is randomly
-              ordered. This is a tab separated list of 
-	         user id | item id | rating | timestamp. 
-              The time stamps are unix seconds since 1/1/1970 UTC   
+- UserIDs range between 1 and 6040 
+- MovieIDs range between 1 and 3952
+- Ratings are made on a 5-star scale (whole-star ratings only)
+- Timestamp is represented in seconds since the epoch as returned by time(2)
+- Each user has at least 20 ratings
 
-u.info     -- The number of users, items, and ratings in the u data set.
+USERS FILE DESCRIPTION
+================================================================================
 
-u.item     -- Information about the items (movies); this is a tab separated
-              list of
-              movie id | movie title | release date | video release date |
-              IMDb URL | unknown | Action | Adventure | Animation |
-              Children's | Comedy | Crime | Documentary | Drama | Fantasy |
-              Film-Noir | Horror | Musical | Mystery | Romance | Sci-Fi |
-              Thriller | War | Western |
-              The last 19 fields are the genres, a 1 indicates the movie
-              is of that genre, a 0 indicates it is not; movies can be in
-              several genres at once.
-              The movie ids are the ones used in the u.data data set.
+User information is in the file "users.dat" and is in the following
+format:
 
-u.genre    -- A list of the genres.
+UserID::Gender::Age::Occupation::Zip-code
 
-u.user     -- Demographic information about the users; this is a tab
-              separated list of
-              user id | age | gender | occupation | zip code
-              The user ids are the ones used in the u.data data set.
+All demographic information is provided voluntarily by the users and is
+not checked for accuracy.  Only users who have provided some demographic
+information are included in this data set.
 
-u.occupation -- A list of the occupations.
+- Gender is denoted by a "M" for male and "F" for female
+- Age is chosen from the following ranges:
 
-u1.base    -- The data sets u1.base and u1.test through u5.base and u5.test
-u1.test       are 80%/20% splits of the u data into training and test data.
-u2.base       Each of u1, ..., u5 have disjoint test sets; this if for
-u2.test       5 fold cross validation (where you repeat your experiment
-u3.base       with each training and test set and average the results).
-u3.test       These data sets can be generated from u.data by mku.sh.
-u4.base
-u4.test
-u5.base
-u5.test
+	*  1:  "Under 18"
+	* 18:  "18-24"
+	* 25:  "25-34"
+	* 35:  "35-44"
+	* 45:  "45-49"
+	* 50:  "50-55"
+	* 56:  "56+"
 
-ua.base    -- The data sets ua.base, ua.test, ub.base, and ub.test
-ua.test       split the u data into a training set and a test set with
-ub.base       exactly 10 ratings per user in the test set.  The sets
-ub.test       ua.test and ub.test are disjoint.  These data sets can
-              be generated from u.data by mku.sh.
+- Occupation is chosen from the following choices:
 
-allbut.pl  -- The script that generates training and test sets where
-              all but n of a users ratings are in the training data.
+	*  0:  "other" or not specified
+	*  1:  "academic/educator"
+	*  2:  "artist"
+	*  3:  "clerical/admin"
+	*  4:  "college/grad student"
+	*  5:  "customer service"
+	*  6:  "doctor/health care"
+	*  7:  "executive/managerial"
+	*  8:  "farmer"
+	*  9:  "homemaker"
+	* 10:  "K-12 student"
+	* 11:  "lawyer"
+	* 12:  "programmer"
+	* 13:  "retired"
+	* 14:  "sales/marketing"
+	* 15:  "scientist"
+	* 16:  "self-employed"
+	* 17:  "technician/engineer"
+	* 18:  "tradesman/craftsman"
+	* 19:  "unemployed"
+	* 20:  "writer"
 
-mku.sh     -- A shell script to generate all the u data sets from u.data.
+MOVIES FILE DESCRIPTION
+================================================================================
+
+Movie information is in the file "movies.dat" and is in the following
+format:
+
+MovieID::Title::Genres
+
+- Titles are identical to titles provided by the IMDB (including
+year of release)
+- Genres are pipe-separated and are selected from the following genres:
+
+	* Action
+	* Adventure
+	* Animation
+	* Children's
+	* Comedy
+	* Crime
+	* Documentary
+	* Drama
+	* Fantasy
+	* Film-Noir
+	* Horror
+	* Musical
+	* Mystery
+	* Romance
+	* Sci-Fi
+	* Thriller
+	* War
+	* Western
+
+- Some MovieIDs do not correspond to a movie due to accidental duplicate
+entries and/or test entries
+- Movies are mostly entered by hand, so errors and inconsistencies may exist
